# DeepSigma

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  =2.0  ABOUT.md  CHANGELOG.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.coherence  Dockerfile.exhaust  Dockerfile.mcp  Dockerfile.otel  Dockerfile.rdf  Dockerfile.tools  EDGE_HARDENING_HEADER_SNIPPET.html  EDITION_DIFF.md  GLOSSARY.md  HERO_DEMO.md  LICENSE  Makefile  NAV.md  OPS_RUNBOOK.md  README.md  README_EDGE_SECURITY.md  SECURITY.md  STABILITY.md  START_HERE.md  TEST_STRATEGY.md  core_baseline.py  docker-compose.yml  pyproject.toml  requirements.txt  run_enterprise_demo.sh  run_money_demo.sh
enterprise/: CHANGELOG.md  Dockerfile  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
enterprise/artifacts/excel/: Coherence_Prompt_OS_v2.xlsx
enterprise/artifacts/public_demo_pack/: LOG_HEAD.json  RUN-0d0a43ed_20260221T000000Z.manifest.json  RUN-0d0a43ed_20260221T000000Z.manifest.json.sig.json  abp_v1.json  authority_ledger.ndjson  transparency_log.ndjson
enterprise/artifacts/stash_backups/: stash2-cleanup-sync-2026-02-23-issue291.patch  stash3-cleanup-sync-2026-02-23-issue285.patch
enterprise/charts/deepsigma/: Chart.yaml
enterprise/core_output/: trust_scorecard.json
enterprise/core_output/step_1_connect/: canonical_records.json
enterprise/core_output/step_3_extract/: claims.json
enterprise/core_output/step_4_seal/: coherence_report.json  dlr.json  ds.json  rs.json
enterprise/core_output/step_6_patch/: coherence_report_patched.json  mg_patched.json
enterprise/dashboard/: api_server.py  coherence_mock_data.json  demo.html  package.json
enterprise/dashboard/credibility-engine-demo/: app.js  correlation_map.json  credibility_packet_example.json  credibility_snapshot.json  styles.css  ttl_timeline.json
enterprise/dashboard/server/: api.py  models_exhaust.py
enterprise/dashboard/src/: App.tsx  IrisPanel.tsx  LLMDataModelPanel.tsx  TrustScorecardPanel.tsx  mockData.ts  store.ts
enterprise/docker/: Dockerfile.coherence  Dockerfile.exhaust  Dockerfile.mcp  Dockerfile.mesh  Dockerfile.otel  Dockerfile.rdf  Dockerfile.tools
enterprise/docker/scale/: Dockerfile.api  docker-compose.scale.yml  nginx.scale.conf
enterprise/docs/: 00-vision.md  01-language-map.md  12-degrade-ladder.md  14-replay.md  16-run-supervised.md  18-iris.md  18-prime.md  20-dlr-claim-native.md  21-dte-enforcer.md  23-langgraph-adapter.md  24-dashboard-api.md  25-reconciler.md  27-power-platform-connector.md  30-local-inference.md  31-abp.md  99-docs-map.md  ABOUT.md  CONFIG_REFERENCE.md  FEATURE_CATALOG.md  GLOSSARY.md  HERO_DEMO.md  NAV.md  OPS_RUNBOOK.md  PILOT_SCORECARD.md  STABILITY.md  START_HERE.md  TEST_STRATEGY.md  TROUBLESHOOTING.md  fixtures.md  mcp-server.md  performance.md  repo_visibility.md
enterprise/docs/api/: README.md  openapi.json
enterprise/docs/canonical/: ds_spec.md  (+3 more)
enterprise/edge/: EDGE_Domino_Delegation_Encryption.html
enterprise/governance/: kpi_eligibility.json  security_crypto_policy.json  tec_ctec_policy.json  tec_weights.yaml
enterprise/policies/: edge-security.md
enterprise/prompts/: README.md
enterprise/release_kpis/: CORE_BASELINE_REPORT.json  ISSUE_LABEL_GATE_REPORT.md  KPI_GATE_REPORT.md  KPI_SUMMARY.md  PR_COMMENT.md  SCALABILITY_GATE_REPORT.md  SECURITY_GATE_REPORT.md  TEC_SUMMARY.md  authority_evidence.json  benchmark_history.json  benchmark_trend.md  economic_cost_ledger.json  economic_metrics.json  feature_catalog.json  history.json  insights_metrics.json  issue_deltas.json  issues_all.json  kpi_bands_v2.0.6.json  kpi_bands_v2.0.7.json  kpi_bands_v2.0.8.json  kpi_bands_v2.0.9.json  kpi_bands_v2.1.0.json  kpi_bands_v2.1.3.json  kpi_confidence.json  kpi_v2.0.10.json  kpi_v2.0.11.json  kpi_v2.0.12.json  kpi_v2.0.13.json  kpi_v2.0.14.json  kpi_v2.0.15.json  kpi_v2.0.16.json  kpi_v2.0.2.json  kpi_v2.0.3_merged.json  kpi_v2.0.4_merged.json  kpi_v2.0.6_merged.json  kpi_v2.0.7.json  kpi_v2.0.7_merged.json  kpi_v2.0.8.json  kpi_v2.0.8_merged.json  (+50 more)
enterprise/roadmap/: roadmap.json
enterprise/schemas/: economic_metrics_v1.json  evidence_source_binding.schema.json  fairness_audit_v1.json
enterprise/scripts/: README.md  build_release_artifacts.py  crypto_misuse_scan.py  crypto_proof.py  detect_intent_mutation.py  economic_metrics.py  edition_guard.py  export_audit_neutral_pack.py  export_authority_evidence.py  export_authority_ledger.py  health_summary.py  icr_health_watcher.py  kpi_compute.py  kpi_merge.py  kpi_run.py  mesh_wan_partition.sh  nonlinear_stability.py  pilot_in_a_box.py  pr_complexity_watcher.py  pre_exec_gate.py  pulse_insights.py  reencrypt_benchmark.py  release_check.py  render_benchmark_trend.py  render_composite_radar.py  render_radar.py  render_roadmap_badge.py  render_roadmap_timeline.py  roadmap_forecast.py  run.py  run_scale_stack.sh  secret_scan.py  security_proof_pack.py  tec_ctec.py  tec_estimate.py  tec_sensitivity.py  update_locks.sh  validate_evidence_binding.py  validate_intent_packet.py  verify_authority_signature.py  (+1 more)
enterprise/tests/: conftest.py  test_authority_refusal.py  test_authority_signature_custody.py  test_azure_auth.py  test_benchmarks.py  test_build_abp.py  test_cli.py  test_coherence_bridge.py  test_coherence_dlr.py  test_coherence_ds.py  test_coherence_mg.py  test_coherence_rs.py  test_connector_fixtures.py  test_credibility_store_encryption.py  test_dashboard_api_wiring.py  test_disr_authority_ledger_v1.py  test_disr_policy.py  test_disr_security_ops.py  test_drift_detector.py  test_dte_enforcer.py  test_golden_path.py  test_integration.py  test_iris.py  test_kpi_compute_security_metrics.py  test_langchain_governance.py  test_langgraph_adapter.py  test_langgraph_connector.py  test_load.py  test_mcp_iris.py  test_metrics_endpoint.py  test_mg_persistence.py  test_multisig.py  test_openclaw_runtime.py  test_prime.py  test_pulse_insights.py  test_reconciler.py  test_reconstruct_replay.py  test_refiner_hardening.py  test_retention_sweep.py  test_security_events.py  (+6 more)
(+2137 files in other folders)
