[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsigma"
version = "0.5.1"
description = "Σ OVERWATCH — Reality Await Layer (RAL) control plane for agentic AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bryan David White", email = "8ryanWh1t3@gmail.com"},
]
keywords = ["agentic-ai", "governance", "coherence-ops", "decision-episodes", "drift-patch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "jsonschema",
    "referencing>=0.35.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
exhaust-llm = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "ruff",
]
langgraph = [
    "langgraph>=0.2.0",
]
azure = [
    "msal>=1.25.0",
]
snowflake = [
    "cryptography>=42.0",
]
rdf = [
    "rdflib>=7.0",
    "pyshacl>=0.25",
]

[project.urls]
Homepage = "https://github.com/8ryanWh1t3/DeepSigma"
Repository = "https://github.com/8ryanWh1t3/DeepSigma"
Wiki = "https://github.com/8ryanWh1t3/DeepSigma/wiki"
Issues = "https://github.com/8ryanWh1t3/DeepSigma/issues"

[project.scripts]
overwatch = "tools.run_supervised:main"
overwatch-validate = "tools.validate_examples:main"
coherence = "coherence_ops.cli:main"
deepsigma = "tools.golden_path_cli:main"

[tool.setuptools.packages.find]
include = [
    "engine*",
    "coherence_ops*",
    "verifiers*",
    "tools*",
    "adapters*",
    "demos*",
]

[tool.ruff]
select = ["E","F","W"]
ignore = ["E501"]
exclude = ["coherence_ops/cli.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmark tests (deselect with '-m \"not benchmark\"')",
]
