[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsigma"
version = "2.0.6"
description = "DeepSigma Core - Drift to Patch governed execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bryan David White", email = "8ryanWh1t3@gmail.com"},
]
keywords = ["governance", "coherence-ops", "drift-patch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "jsonschema",
    "referencing>=0.35.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
excel = [
    "openpyxl>=3.1.0",
]
enterprise = [
    "matplotlib>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/8ryanWh1t3/DeepSigma"
Repository = "https://github.com/8ryanWh1t3/DeepSigma"
Issues = "https://github.com/8ryanWh1t3/DeepSigma/issues"

[project.scripts]
coherence = "core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "core*",
    "coherence_ops*",
]

[tool.ruff]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
